# brAInwars

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .sqlx  Anchor.toml  Cargo.toml  README.md  TODO.md  brainwar.Dockerfile  maintenance.html  package.json  solita.ts  sqlx-data.json  tsconfig.json
backend/: .env.local  .env.production  .env.staging  .env.test  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  heroku.yml  spec.yaml
backend/.sqlx/: query-00cf95ce02eb713dc78c6c6da9d38e2598e7658ec7148d6496dd20787f9dad21.json  query-046a70e65f0e90757c45d52725235a1ed39cb6c63a63c15b1ffff826580a99ad.json  query-054942a6c1ee370366ca11cea03d130f541b9d704a53382aca1a64ed78222513.json  query-05a07f6b6ff0eee8f0639dfbbea2c52c67012755203424700355a733b9040a15.json  query-09ef1c91a26e810862e22e24dec9d57be87ede6e54010a42b759aee39af6246b.json  query-1510a2ff3263032e0e3c8e8485942391b49c5b817203ef4f40c3def0defd82a3.json  query-1a5fb0a89ecabd54e4c45691baefe370c05cc7f8b4c955d760acc1098c732841.json  query-1eb2e12d671dc1f3815243706baa39585b59208445ea0e23c310b0755f36543d.json  query-2809fd63f58ccbc85190d73428f1fbfdf163d95bc7181147757db3270e7c8533.json  query-3946bfa98a2956b25336c56d7fc633e61e6928924d6c57e74b498a37ae811228.json  query-423314f1edf10849ce17527dd64146252194fd05adb230fbce4955d10cf60cdc.json  query-476da6f63b17ee3b8894ba392df09e52698f07940c0c7f6c56f5a8c464d4bd81.json  query-48d8ed6395085acd1e18ff9de12875d7f0eb4784ae95be428401ff040e10e09d.json  query-48e47f8e1846c02d0b957e7b5a430ac0921227f0eb8b6006b14278cb54c6b055.json  query-4a5648ff80345e2f9337e4337b4b90e08ec29cffc9b5d9065d7449202d3bea04.json  query-4d45f216329026773f4817bddd6ec6d5a0b1947b74488f1ecdeece3abb64ef86.json  query-520954995cec64f1967abdefa34b87e95ae1de4f2474f32e95d7d025ce7eaaee.json  query-52f1d1452716be52aeaea1bb9c75e93b37f50d78535cc74c2e743a5d242fe200.json  query-537ba85311a5f10c1d9004926e5fe2a8c5dd417d5b137d4114721697c218e9fd.json  query-554c9a9921eb3008ea56e3360626b142dc1f94ca067463b4747541ed0fef938e.json  query-5a297035eae59790d7915c794068b582b1b796e6c6b4f222e2f6cfb66aa33059.json  query-5b3e4a28e161bdcfec1910f30547db39e449a70c89cf5185c562cafd70317143.json  query-655a783160cc673be20cdeb51f81d7e0aaba27057afc402d718bcb732cdb1e58.json  query-78a4a4503d7b1a9598d29f5634c41c82fef8edf2f79945d779e4b39e9f3857cb.json  query-7d7689a325808254cfb349eec5b38f131c26537a6426807df739908a66963fb3.json  query-80e42d7c09adc6ccb104637f187809ed9ff3bd9ae620e51215331589a0ad4300.json  query-8b32a5ee80f4a075db2fb159586680d6548e0bc5121ac0346d308243e3a099ad.json  query-8e6e637de592288298a00cf2ecf298a93dc81bfc652a50d336841f3876347b4b.json  query-952480ed7ea12b06abd5658a70defd53fec92e77b816f860914dd939875c0ac9.json  query-9553022f34cb428891536028c2b294015628de13a370e57de452081acc0616f6.json  query-9a900d80f2b58efe03f24be0b33a8aac77d90a103f18de2be6dc692ef91b8ee5.json  (+18 more)
backend/configuration/: base.yaml  test.yaml
(+318 files in other folders)
